# discord-battlefield-playerlist

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  config.example.txt
.github/workflows/: main.yml  rust-clippy.yml  rust.yml
src/: main.rs
src/structs/: bf4_player_list.rs  config.rs  mod.rs  player_list.rs  seeder_player_list.rs
src/to_table/: bf4_player_list.rs  mod.rs  player_list.rs  seeder_player_list.rs
