[package]
name = "discord_playerlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28", features = ["rt", "rt-multi-thread"] }
anyhow = "1.0"
flexi_logger = "0.27"
log = "0.4"
warp = "0.3"
chrono = "0.4"
tabular = "0.2"
confy = "0.5"
timeago = { version = "0.4", features = ["chrono"] }

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]
